Fix: Center all body elements so change due elements are aligned with all other elements

--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
 }
 
 body {
+    align-items: center;
     background-color: #FD5F22;
+    display: flex;
+    flex-direction: column;
     font-family: '00433';
     margin: 0;
 }
